<resources>
    <string name="app_name">Trezentos</string>

    <!-- Alerts -->
    <string name="msg_error_login">Ocorreu um erro ao entrar</string>
    <string name="msg_empty_space_error_message">Preencha todos os campos!</string>

    <!-- Names -->
    <string name="msg_len_name_error_message">O nome deve ter de 3 a 50 caracteres</string>
    <string name="msg_null_name_error_message">O nome não pode estar vazio</string>
    <string name="msg_class_name_case_error_message">O nome da sala deve ter de 3 a 20 caracteres.</string>
    <string name="msg_institution_case_error_message">O nome da instituicao deve ter de 3 a 20 caracteres.</string>
    <string name="msg_create_exam_name_error">O nome da prova deve ter de 2 a 15 caracteres.</string>

    <!-- Passwords -->
    <string name="msg_len_password_error_message">A senha deve ter entre 6 e 16 caracteres</string>
    <string name="msg_null_password_error_message">A senha não pode estar vazia</string>
    <string name="msg_password_conf_error_message">Senhas não coincidem, tente novamente</string>
    <string name="msg_upper_case_error_message">A senha deve ter ao menos um caracter maiusculo</string>

    <!-- Emails -->
    <string name="msg_null_email_error_message">"O email não pode estar vazio"</string>
    <string name="msg_len_email_error_message">"O email deve ter entre 5 e 50 caracteres válidos"</string>
    <string name="msg_special_characters_email_error_message">"Email com caracteres inválidos. Tente novamente"</string>

    <!-- Telephones -->
    <string name="telephone_ddi_error_message">"DDI deve estar no formato +XX"</string>
    <string name="telephone_ddd_error_message">"DDD deve ter 2 números"</string>
    <string name="telephone_number_error_message">"Número deve ter 9 dígitos"</string>

    <!-- Create class -->
    <string name="classname">Nome da sala</string>
    <string name="institution">Instituiçao (opcional)</string>
    <string name="password">Senha da sala</string>
    <string name="cutoff">Nota de corte</string>
    <string name="instituition">Instituição</string>
    <string name="addition">Acréscimo</string>
    <string name="sizegroups">Tamanho dos grupos</string>
    <string name="msg_len_size_group_error_message">O tamanho do grupo nao pode ser zero.</string>
    <string name="msg_len_addition_error_message">O acrescimo nao pode ser zero.</string>
    <string name="msg_len_cut_off_error_message">A nota de corte nao pode ser zero.</string>

    <string name="msg_signup_success">Usuário cadastrado com sucesso!</string>
    <string name="msg_class_success">Sucesso</string>
    <!-- Login -->
    <string name="facebook_app_id">1840540606200745</string>
    <string name="sign_up_text">Cadastrar</string>
    <string name="already_sign_up"> <u> Já sou cadastrado </u></string>
    <string name="error_login">Ocorreu um erro ao entrar</string>
    <string name="cancel_login">Login cancelado</string>
    <string name="salas">Salas</string>
    <string name="perfil">Perfil</string>
    <string name="avaliacao">Avaliação</string>
    <string name="sobre">Sobre</string>
    <string name="criar_sala">Criar sala</string>
    <string name="msg_cancel_login">Login cancelado</string>

    <!-- Buttons -->
    <string name="btn_already_signed_up"> <u> Já sou cadastrado </u></string>
    <string name="btn_login_to_sign_up">Cadastrar</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Esqueceu a senha?</string>
    <string name="btn_fb_login">CONTINUAR COM FACEBOOK</string>
    <string name="btn_signup">Cadastrar</string>
    <string name="btn_about">Sobre</string>
    <string name="btn_send_to_email">ENVIAR</string>
    <string name="btn_return_to_login">Retornar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Criar</string>

    <!-- Register -->
    <string name="txt_password">Senha</string>
    <string name="txt_telephone_DDD">DDD</string>
    <string name="txt_telephone">Telefone</string>

    <!-- Forgot Password -->
    <string name="txt_email">E-mail</string>
    <string name="txt_name">Nome</string>
    <string name="txt_confirm_password">Confirme a senha</string>

    <!--Menu-->
    <string name="configuracoes">Configuracoes</string>
    <string name="delete_classs">Excluir Sala</string>
    <string name="sort_groups">Ordenar Grupos</string>

    <!--Tab-->
    <string name="tab_text_students">Alunos</string>
    <string name="tab_text_tests">Salas</string>
    <string name="tab_group_number">Grupo 1</string>


    <!--ExamFragment-->
    <string name="name_exam">Nome da Prova</string>

    <!--About-->
    <string name="about_site">Site</string>
    <string name="about_metodo_trezentos">Método Trezentos.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="about_trezentos">Trezentos</string>
    <string name="about_tedx">TEDx Universidade de Brasília</string>
    <string name="about_metodologia">Metodologia Trezentos</string>
    <string name="about_entenda_metodo">Entenda o método em 3 minutos</string>
    <string name="about_para_professores">Trezentos para professores</string>
    <string name="about_detalhes">Detalhes técnicos</string>
    <string name="about_artigo">Artigo sobre o Trezentos</string>
    <string name="about_pdf_download">PDF Download</string>
    <string name="about_record">Record</string>
    <string name="about_reportagem">Reportagem sobre o Trezentos</string>
    <string name="about_unbtv">UnBTV</string>
    <string name="invalid_login">Email ou senha inválidos</string>

    <!-- Class Fragment -->
    <string name="no_user_class">Você não entrou em nenhuma sala</string>
    <string name="no_internet">Não há nenhuma conexão de rede agora</string>
    <string name="repeat">Repetir</string>

    <!--Join Class-->
    <string name="join_class_wrong_password_error">Senha errada. Por favor, digite novamente</string>
    <string name="join_class_null_password_error">A senha não pode ser vazia</string>
    <string name="join_class_failed">Algo deu errado. Por favor, tente novamente.</string>
    <string name="join_class_success">Aluno registrado com sucesso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atualizar_notas">Atualizar Notas</string>
    <string name="update_grades">Salvar Notas</string>
    <string name="not_defined_groups">Sua sala não possui alunos suficientes para formar grupos.</string>
    <string name="this_action_cannot_be_undone">Essa ação não pode ser desfeita</string>
    <string name="are_you_sure">Você tem certeza que deseja continuar?</string>
    <string name="confirm">confirmar</string>
    <string name="update_trezentos_grades">Salvar Notas Trezentos</string>
    <string name="send_evaluation">Encaminhar Avaliaçoes</string>

    <string name="msg_null_name_exam_error_message">O nome não pode ser vazio</string>
    <string name="msg_null_name_userClass_error_message">O nome não pode ser vazio</string>
    <string name="msg_null_classOwnerEmail_error_message">O email não pode estar vazio</string>
    <string name="msg_len_name_exam_error">O nome da prova deve ter entre 2 e 15 caracteres.</string>
    <string name="helpers">Ajudantes</string>
    <string name="helped">Ajudados</string>
    <string name="exit_text">Sair</string>
    <string name="profile_email">Profile Email</string>
    <string name="profile_name">Profile Name</string>
    <string name="exit_text_view">Sair</string>
    <string name="enter_class">Entrar</string>
    <string name="put_class_password">Insira a Senha da Sala</string>
    <string name="return_exam">Voltar</string>
    <string name="save_exam">Salvar</string>
    <string name="mine_group">Meu Grupo</string>
    <string name="return_to_class">Voltar</string>
    <string name="save_class">Salvar</string>
</resources>
