<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fga.mds.gpp.trezentos.View.ForgotPasswordActivity"
    android:background="#ffc700"
    android:orientation="vertical">


        <ImageView
            android:layout_marginTop="60dp"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:id="@+id/logoImage"
            android:src="@drawable/trezentoslogo"
            android:layout_gravity="center"
            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/forgot_pass_text_email"
                    android:layout_width="360dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/txt_email"
                    android:textColor="@color/textRegisterColor"
                    android:textColorHint="@android:color/black"
                    android:background="@drawable/rounded_edit_text"

                    android:paddingLeft="10dp"
                    />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/button_forgot_pass_email"
            android:text="@string/btn_send_to_email"
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_register_button"

             />

        <Button
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:id="@+id/button_return_login"
            android:text="@string/btn_return_to_login"
            android:textSize="13sp"
            android:textColor="#000"
            android:background="@android:color/transparent"
            />



</LinearLayout>
